--- a/src/component/Explore.css
+++ b/src/component/Explore.css
@@ -69,3 +69,18 @@
     font-size: 20px;
   }
   
+  @media screen and (max-width: 768px) {
+    .img_cv{
+      width: 350px;
+      margin-top: 50px
+     }
+     
+     .title{
+      font-size: 40px;
+      top: 90px;
+      width: 500px;
+  }
+  .download{
+    bottom: 50px;
+  }
+  }
