--- a/src/component/Explore.css
+++ b/src/component/Explore.css
@@ -84,3 +84,19 @@
     bottom: 50px;
   }
   }
+
+  @media screen and (max-width: 480px) {
+    .img_cv{
+      width: 300px;
+      margin-top: 50px
+     }
+     
+     .title{
+      font-size: 40px;
+      top: 90px;
+      width: 500px;
+  }
+  .download{
+    bottom: 50px;
+  }
+  }
